networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-authorized

spec:
  podSelector:
    matchLabels:
      access: "true"

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
